--- a/public/cart/cart.html
+++ b/public/cart/cart.html
@@ -18,7 +18,7 @@
 
       <ul class="main-nav">
           <li><a href="./../home.html">Home</a></li>
-          <li><a href="./../home.html#features">Features</a></li>
+          <li><a href="./../aboutus/aboutus.html">About Us</a></li>
           <li><a href="./../home.html#categories">Categories</a></li>
           <li><a href="./../home.html#review">Reviews</a></li>
           <l1><a href="./../faq/faq.html">FAQ</a></l1>
