--- a/public/home.html
+++ b/public/home.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#features">features</a>
+        <a href="./aboutus/aboutus.html">About Us</a>
         <a href="#categories">categories</a>
         <a href="./t&c/t&c.html">Terms and Conditions</a>
         <a href="./faq/faq.html">faq</a>
@@ -36,7 +36,7 @@
     <div class="icons">
         <div class="fas fa-bars" id="menu-btn"></div>
         <div class="fas fa-map-marker" id="search-btn"></div>
-       <div class="fas fa-shopping-cart" id="cart-btn"> <a href="cart/cart.html"><span>0</span></a></div>
+        <a href="cart/cart.html"> <div class="fas fa-shopping-cart" id="cart-btn"> </div></a>
         <div class="fas fa-user" id="login-btn"></div>
     </div>
 
