--- a/public/t&c/t&c.html
+++ b/public/t&c/t&c.html
@@ -19,7 +19,7 @@
 
   <ul class="main-nav">
       <li><a href="./../home.html">Home</a></li>
-      <li><a href="./../home.html#features">Features</a></li>
+      <li><a href="./../aboutus/aboutus.html">About Us</a></li>
       <li><a href="./../home.html#categories">Categories</a></li>
       <li><a href="./t&c.html">Terms and Conditions</a></li>
       <li><a href="./../faq/faq.html">FAQ</a></li>
